exercise-12/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: training-api
        image: mycloudfun/training-api:1.0
        imagePullPolicy: Always
