exercise-12/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: training-api-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 7000
  selector:
    app: api
